--- a/week_1/mission_1/style.css
+++ b/week_1/mission_1/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #007bff; /* 배경색을 파랑색으로 설정 */
+    background-color: #007bff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* 화면 전체 높이 */
+    height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
 }
@@ -14,7 +14,7 @@ h2 {
 }
 
 form {
-    background-color: #f0f0f0; /* 밝은 회색 */
+    background-color: #f0f0f0;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -29,17 +29,17 @@ input[type="submit"] {
     padding: 10px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #fff; /* 입력 박스 테두리를 흰색으로 설정 */
+    border: 1px solid #fff;
     box-sizing: border-box;
-    border-radius: 5px; /* 입력 박스의 모서리를 둥글게 */
+    border-radius: 5px;
 }
 
 input[type="submit"] {
-    background-color: #000; /* 검은색 배경 */
-    color: white; /* 흰색 글씨 */
-    cursor: pointer; /* 마우스 오버 시 커서 변경 */
+    background-color: #000;
+    color: white;
+    cursor: pointer;
 }
 
 input[type="submit"]:hover {
-    opacity: 0.8; /* 버튼에 마우스를 올렸을 때 투명도 변경 */
+    opacity: 0.8;
 }
