--- a/week_1/mission_2/style.css
+++ b/week_1/mission_2/style.css
@@ -26,8 +26,9 @@ input[type="text"] {
 }
 
 hr {
-    height: 4px;
+    height: 1px;
     border: none;
+    width: 50%;
     background-color: #161414;
 }
 
